unpackaged/main/default/objects/Lead/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Contact person at this address:

Street:
City:
State Abbreviation:
Zip:</description>
    <inlineHelpText>Contact person at this address:

Street:
City:
State Abbreviation:
Zip:</inlineHelpText>
    <label>Address #2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>