unpackaged/main/default/objects/Lead/fields/BD_notes__c.field-meta.xml
<CustomField>
    <fullName>BD_notes__c</fullName>
    <label>BD Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>