unpackaged/main/default/objects/Lead/fields/Closed_Forwarded_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closed_Forwarded_Notes__c</fullName>
    <description>Used to provide guidance when the record type is switched via automation from State Dental to Brick and Mortar and vice versa.</description>
    <inlineHelpText>Describe why you are forwarding this Lead. What does the customer have interest in?</inlineHelpText>
    <label>Closed-Forwarded Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>