unpackaged/main/default/objects/Lead/fields/Date_of_last_training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_training__c</fullName>
    <label>Date of last training</label>
    <type>Date</type>
</CustomField>