unpackaged/main/default/objects/Lead/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>An Employer Identification Number (EIN), also known as a Federal Tax Identification Number, is a nine-digit number used to identify a business entity for tax ID purposes.</description>
    <inlineHelpText>An Employer Identification Number (EIN), also known as a Federal Tax Identification Number, is a nine-digit number used to identify a business entity for tax ID purposes.</inlineHelpText>
    <label>EIN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>