unpackaged/main/default/objects/Lead/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Association_s</valueSetName>
    </valueSet>
</CustomField>