unpackaged/main/default/objects/Lead/fields/Internal_Dental_Software__c.field-meta.xml
<CustomField>
    <fullName>Internal_Dental_Software__c</fullName>
    <label>Internal Dental Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>