unpackaged/main/default/objects/Lead/fields/Language_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Language_Requirement__c</fullName>
    <label>Language Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>