unpackaged/main/default/objects/Lead/fields/Languages_spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_spoken__c</fullName>
    <label>Languages Spoken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>