unpackaged/main/default/objects/Lead/fields/Lead_bucket__c.field-meta.xml
<CustomField>
    <fullName>Lead_bucket__c</fullName>
    <label>Lead bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_bucket</valueSetName>
    </valueSet>
</CustomField>