unpackaged/main/default/objects/Lead/fields/Lead_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_Name__c</fullName>
    <description>Used in conversion mapping via automation</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Record Type Name</label>
    <type>Text</type>
</CustomField>