unpackaged/main/default/objects/Lead/fields/Licensed_in_multiple_states__c.field-meta.xml
<CustomField>
    <fullName>Licensed_in_multiple_states__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensed in multiple states?</label>
    <type>Checkbox</type>
</CustomField>