unpackaged/main/default/objects/Lead/fields/Licensed_in_State_s__c.field-meta.xml
<CustomField>
    <fullName>Licensed_in_State_s__c</fullName>
    <label>Licensed in State(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Licensed_in_multiple_states__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Licensed_in_State_s</valueSetName>
    </valueSet>
</CustomField>