unpackaged/main/default/objects/Lead/fields/Medical_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Medical_Qualifications__c</fullName>
    <label>Medical Qualifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Qualifications</valueSetName>
    </valueSet>
</CustomField>