unpackaged/main/default/objects/Lead/fields/Multilingual__c.field-meta.xml
<CustomField>
    <fullName>Multilingual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multilingual</label>
    <type>Checkbox</type>
</CustomField>