unpackaged/main/default/objects/Lead/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>National Provider Identifier Standard (NPI)</description>
    <inlineHelpText>National Provider Identifier Standard (NPI)</inlineHelpText>
    <label>NPI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>