unpackaged/main/default/objects/Lead/fields/OPPURTUNITY_FLOW__c.field-meta.xml
<CustomField>
    <fullName>OPPURTUNITY_FLOW__c</fullName>
    <label>OPPURTUNITY FLOW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempted contact</fullName>
            </value>
            <value>
                <fullName>John</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>