unpackaged/main/default/objects/Lead/fields/Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Practice_Name__c</fullName>
    <label>Practice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>