unpackaged/main/default/objects/Lead/fields/Provider_Relations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Provider_Relations_Notes__c</fullName>
    <label>Provider Relations Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>