unpackaged/main/default/objects/Lead/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <label>Referred by</label>
    <length>222</length>
    <type>Text</type>
</CustomField>