unpackaged/main/default/objects/Lead/fields/Role_identity__c.field-meta.xml
<CustomField>
    <fullName>Role_identity__c</fullName>
    <description>What is the role of this person in the deal process?</description>
    <inlineHelpText>What is the role of this person in the deal process?</inlineHelpText>
    <label>Role identity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Contact_Role</valueSetName>
    </valueSet>
</CustomField>