unpackaged/main/default/objects/Lead/fields/Service_interest__c.field-meta.xml
<CustomField>
    <fullName>Service_interest__c</fullName>
    <label>Service interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Specialty</valueSetName>
    </valueSet>
</CustomField>