unpackaged/main/default/objects/Lead/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Specialty</valueSetName>
    </valueSet>
</CustomField>