unpackaged/main/default/objects/Lead/fields/State_Dentist_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Dentist_Day_Rate__c</fullName>
    <label>State Dentist Day Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>