unpackaged/main/default/objects/Lead/fields/TIN__c.field-meta.xml
<CustomField>
    <fullName>TIN__c</fullName>
    <description>A tax identification number is a nine-digit ID that government authorities use to identify a business or individual. The tax identification number for an individual is called his Social Security number.</description>
    <inlineHelpText>A tax identification number is a nine-digit ID that government authorities use to identify a business or individual. The tax identification number for an individual is called his Social Security number.</inlineHelpText>
    <label>TIN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>