unpackaged/main/default/objects/Lead/fields/Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Distance__c</fullName>
    <label>Travel Distance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Willing_to_travel__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Travel_Distance</valueSetName>
    </valueSet>
</CustomField>