unpackaged/main/default/objects/Lead/fields/Will_work_events_outside_dental__c.field-meta.xml
<CustomField>
    <fullName>Will_work_events_outside_dental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This may be a superfluous field since we can check multiple specialties in the specialty picklist.</description>
    <label>Will work events outside dental?</label>
    <type>Checkbox</type>
</CustomField>