unpackaged/main/default/objects/Lead/fields/Willing_to_travel__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_travel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to travel?</label>
    <type>Checkbox</type>
</CustomField>