unpackaged/main/default/objects/Lead/recordTypes/Brick_and_Mortar.recordType-meta.xml
<RecordType>
    <fullName>Brick_and_Mortar</fullName>
    <active>true</active>
    <businessProcess>State Dentist Lead Process</businessProcess>
    <description>Used for brick and mortar opportunities</description>
    <label>Brick and Mortar</label>
</RecordType>