unpackaged/main/default/objects/Lead/recordTypes/Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner</fullName>
    <active>true</active>
    <businessProcess>Business Development %28Lead process%29</businessProcess>
    <description>Used to qualify Channel Partners (no opportunity created)</description>
    <label>Channel Partner</label>
</RecordType>