unpackaged/main/default/objects/Lead/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <businessProcess>Business Development %28Lead process%29</businessProcess>
    <description>Used for coporate events</description>
    <label>Corporate</label>
</RecordType>