unpackaged/main/default/objects/Lead/recordTypes/Government.recordType-meta.xml
<RecordType>
    <fullName>Government</fullName>
    <active>true</active>
    <businessProcess>Business Development %28Lead process%29</businessProcess>
    <description>Used for Government opportunities</description>
    <label>Government</label>
</RecordType>