unpackaged/main/default/objects/Lead/recordTypes/State_Dental_record_type.recordType-meta.xml
<RecordType>
    <fullName>State_Dental_record_type</fullName>
    <active>true</active>
    <businessProcess>State Dentist Lead Process</businessProcess>
    <description>State Dentist record type (no opportunity created)</description>
    <label>State Dental</label>
</RecordType>