unpackaged/main/default/objects/Lead/validationRules/Closed_Forwarded_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Forwarded_Notes_Required</fullName>
    <active>true</active>
    <description>Closed Forwarded Notes are required.</description>
    <errorConditionFormula>AND (
OR(
ISPICKVAL( Status , "Closed-Forwarded")),
OR(
ISBLANK( Closed_Forwarded_Notes__c  ) ))</errorConditionFormula>
    <errorMessage>Closed Forwarded Notes are required. Please list what the customer may have interest in.</errorMessage>
</ValidationRule>